prepare for containerization and kube runtime